* Dialer: put workaround for PHP bug #18556 which breaks dialerd with Turkish
  locales. Fixes Elastix bug #1381. 
* Campaign Out: implement manual choosing of character set encoding for CSV file
  upload. 
* Dialer: fix incorrect field access syntax on trunk error output.
* Agent Console: if Elastix user has a default extension, suggest this extension
  as the extension to use for initial agent login. Possible fix for Elastix bug
  #1354.
* Agents Monitoring: make use of "getagentactivitysummary" request to rewrite
  the implementation of the real-time status report. The report now uses
  long polling and Server Sent Events in a way similar to the Agent Console. 
  This rewrite is expected to significantly reduce the server load over the old
  strategy of running the complete report algorithm every four seconds.
* Agent Console: extend library to add support for getagentactivitysummary.
* Dialer (ECCP): new request "getagentactivitysummary" that produces a summary
  of agent activity on a date range. 
* Dialer (ECCP): extend "getagentstatus" request to report the queue number that
  assigned the call currently connected to the agent.
* Agent Console: fix incorrect check for schedule_use_daterange and
  schedule_use_sameagent flags in call scheduling.
* Agent Console: fix incorrect check for atxfer parameter in call transfer.
  This should allow attended transfer to work from the web console.
* Dialer: remove last call to deprecated ereg(). 
* Agent Console: add onsubmit handling to login form so that pressing ENTER
  also starts login process.
* Dialer: remove E_STRICT from error_reporting to silence warning messages at 
  daemon startup in Fedora 17.
* Dialer: set the timezone explictly for PHP 5.3+ compatibility.
* Dialer: parse manager.conf manually as it may contain characters that choke
  parse_ini_file(). Fixes Elastix bug #1211.
* Dialer: add new configuration parameter to specify the maximum number of